chore: Ajout des fichiers de documentation et du dossier .cursor au .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,11 @@ yarn-error.log*
 
 # TypeScript
 *.tsbuildinfo
-next-env.d.ts 
+next-env.d.ts
+
+# Documentation
+crud.md
+db.md
+
+# Cursor
+.cursor/ 
