--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "clean": "rimraf .next && rimraf node_modules",
+    "clean:db": "rimraf data/*.db",
+    "dev:clean": "npm run clean:db && npm run dev"
   },
   "dependencies": {
     "better-sqlite3": "^11.8.1",
-    "next": "14.1.0",
+    "next": "^14.2.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "rimraf": "^6.0.1"
   }
 }
