--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "dependencies": {
     "better-sqlite3": "^11.8.1",
     "next": "^14.2.23",
+    "next-swagger-doc": "^0.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "swagger-ui-express": "^5.0.1",
+    "swagger-ui-react": "^5.18.3",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "rimraf": "^6.0.1"
