--- a/package.json
+++ b/package.json
@@ -1,28 +1,351 @@
 {
   "name": "backend-portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "clean": "rimraf .next && rimraf node_modules",
-    "clean:db": "rimraf data/*.db",
-    "dev:clean": "npm run clean:db && npm run dev"
-  },
+  "version": "1.0.0",
+  "description": "Ce projet est le backend de mon portfolio personnel, développé avec Next.js et SQLite.",
+  "main": "index.js",
   "dependencies": {
+    "@nestjs/common": "^11.0.9",
+    "@nestjs/core": "^11.0.9",
+    "@nestjs/platform-express": "^11.0.9",
+    "@nestjs/swagger": "^11.0.3",
+    "abbrev": "^1.1.1",
+    "accepts": "^1.3.8",
+    "agent-base": "^6.0.2",
+    "agentkeepalive": "^4.6.0",
+    "aggregate-error": "^3.1.0",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^6.2.1",
+    "apg-lite": "^1.0.4",
+    "aproba": "^2.0.0",
+    "are-we-there-yet": "^3.0.1",
+    "argparse": "^1.0.10",
+    "array-flatten": "^1.1.1",
+    "asynckit": "^0.4.0",
+    "autolinker": "^3.16.2",
+    "axios": "^1.7.9",
+    "balanced-match": "^1.0.2",
+    "base64-js": "^1.5.1",
     "better-sqlite3": "^11.8.1",
+    "bindings": "^1.5.0",
+    "bl": "^4.1.0",
+    "body-parser": "^1.20.3",
+    "brace-expansion": "^1.1.11",
+    "buffer": "^5.7.1",
+    "busboy": "^1.6.0",
+    "bytes": "^3.1.2",
+    "cacache": "^15.3.0",
+    "call-bind-apply-helpers": "^1.0.1",
+    "call-bound": "^1.0.3",
+    "call-me-maybe": "^1.0.2",
+    "caniuse-lite": "^1.0.30001699",
+    "character-entities": "^1.2.4",
+    "character-entities-legacy": "^1.1.4",
+    "character-reference-invalid": "^1.1.4",
+    "chownr": "^2.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "classnames": "^2.5.1",
+    "clean-stack": "^2.2.0",
+    "cleye": "^1.3.2",
+    "client-only": "^0.0.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "color-support": "^1.1.3",
+    "combined-stream": "^1.0.8",
+    "comma-separated-tokens": "^1.0.8",
+    "commander": "^6.2.0",
+    "concat-map": "^0.0.1",
+    "console-control-strings": "^1.1.0",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "cookie": "^0.7.1",
+    "cookie-signature": "^1.0.6",
+    "copy-to-clipboard": "^3.3.3",
+    "core-js-pure": "^3.40.0",
+    "cross-spawn": "^7.0.6",
+    "css.escape": "^1.5.1",
+    "debug": "^4.4.0",
+    "decompress-response": "^6.0.0",
+    "deep-extend": "^0.6.0",
+    "deepmerge": "^4.3.1",
+    "delayed-stream": "^1.0.0",
+    "delegates": "^1.0.0",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "detect-libc": "^2.0.3",
+    "doctrine": "^3.0.0",
+    "dompurify": "^3.1.6",
+    "drange": "^1.1.1",
+    "dunder-proto": "^1.0.1",
+    "eastasianwidth": "^0.2.0",
+    "ee-first": "^1.1.1",
+    "emoji-regex": "^8.0.0",
+    "encodeurl": "^2.0.0",
+    "encoding": "^0.1.13",
+    "end-of-stream": "^1.4.4",
+    "env-paths": "^2.2.1",
+    "err-code": "^2.0.3",
+    "es-define-property": "^1.0.1",
+    "es-errors": "^1.3.0",
+    "es-object-atoms": "^1.1.1",
+    "escape-html": "^1.0.3",
+    "esutils": "^2.0.3",
+    "etag": "^1.8.1",
+    "expand-template": "^2.0.3",
+    "express": "^4.21.2",
+    "fast-json-patch": "^3.1.1",
+    "fault": "^1.0.4",
+    "file-uri-to-path": "^1.0.0",
+    "finalhandler": "^1.3.1",
+    "follow-redirects": "^1.15.9",
+    "foreground-child": "^3.3.0",
+    "form-data": "^4.0.1",
+    "format": "^0.2.2",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "fs-constants": "^1.0.0",
+    "fs-minipass": "^2.1.0",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.2",
+    "gauge": "^4.0.4",
+    "get-intrinsic": "^1.2.7",
+    "get-proto": "^1.0.1",
+    "github-from-package": "^0.0.0",
+    "glob": "^7.2.3",
+    "gopd": "^1.2.0",
+    "graceful-fs": "^4.2.11",
+    "has-symbols": "^1.1.0",
+    "has-unicode": "^2.0.1",
+    "hasown": "^2.0.2",
+    "hast-util-parse-selector": "^2.2.5",
+    "hastscript": "^6.0.0",
+    "highlight.js": "^10.7.3",
+    "highlightjs-vue": "^1.0.0",
+    "http-cache-semantics": "^4.1.1",
+    "http-errors": "^2.0.0",
+    "http-proxy-agent": "^4.0.1",
+    "https-proxy-agent": "^5.0.1",
+    "humanize-ms": "^1.2.1",
+    "iconv-lite": "^0.6.3",
+    "ieee754": "^1.2.1",
+    "immutable": "^3.8.2",
+    "imurmurhash": "^0.1.4",
+    "indent-string": "^4.0.0",
+    "infer-owner": "^1.0.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "ini": "^1.3.8",
+    "invariant": "^2.2.4",
+    "ip-address": "^9.0.5",
+    "ipaddr.js": "^1.9.1",
+    "is-alphabetical": "^1.0.4",
+    "is-alphanumerical": "^1.0.4",
+    "is-decimal": "^1.0.4",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-hexadecimal": "^1.0.4",
+    "is-lambda": "^1.0.1",
+    "isarray": "^2.0.5",
+    "isexe": "^2.0.0",
+    "jackspeak": "^4.0.2",
+    "js-file-download": "^0.4.12",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "jsbn": "^1.1.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "lodash.get": "^4.4.2",
+    "lodash.isequal": "^4.5.0",
+    "lodash.mergewith": "^4.6.2",
+    "loose-envify": "^1.4.0",
+    "lowlight": "^1.20.0",
+    "lru-cache": "^6.0.0",
+    "make-fetch-happen": "^9.1.0",
+    "math-intrinsics": "^1.1.0",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.3",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "mimic-response": "^3.1.0",
+    "minim": "^0.23.8",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.8",
+    "minipass": "^3.3.6",
+    "minipass-collect": "^1.0.2",
+    "minipass-fetch": "^1.4.1",
+    "minipass-flush": "^1.0.5",
+    "minipass-pipeline": "^1.2.4",
+    "minipass-sized": "^1.0.3",
+    "minizlib": "^2.1.2",
+    "mkdirp": "^1.0.4",
+    "mkdirp-classic": "^0.5.3",
+    "ms": "^2.1.3",
+    "nanoid": "^3.3.8",
+    "napi-build-utils": "^2.0.0",
+    "negotiator": "^0.6.4",
+    "neotraverse": "^0.6.18",
     "next": "^14.2.23",
     "next-swagger-doc": "^0.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "node-abi": "^3.74.0",
+    "node-abort-controller": "^3.1.1",
+    "node-addon-api": "^7.1.1",
+    "node-domexception": "^1.0.0",
+    "node-fetch-commonjs": "^3.3.2",
+    "node-gyp": "^8.4.1",
+    "node-gyp-build": "^4.8.4",
+    "nopt": "^5.0.0",
+    "npmlog": "^6.0.2",
+    "object-assign": "^4.1.1",
+    "object-inspect": "^1.13.4",
+    "on-finished": "^2.4.1",
+    "once": "^1.4.0",
+    "openapi-path-templating": "^2.1.0",
+    "openapi-server-url-templating": "^1.3.0",
+    "openapi-types": "^12.1.3",
+    "p-map": "^4.0.0",
+    "package-json-from-dist": "^1.0.1",
+    "parse-entities": "^2.0.0",
+    "parseurl": "^1.3.3",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-scurry": "^2.0.0",
+    "path-to-regexp": "^0.1.12",
+    "picocolors": "^1.1.1",
+    "postcss": "^8.4.31",
+    "prebuild-install": "^7.1.3",
+    "prismjs": "^1.29.0",
+    "process": "^0.11.10",
+    "promise-inflight": "^1.0.1",
+    "promise-retry": "^2.0.1",
+    "prop-types": "^15.8.1",
+    "property-information": "^5.6.0",
+    "proxy-addr": "^2.0.7",
+    "proxy-from-env": "^1.1.0",
+    "pump": "^3.0.2",
+    "qs": "^6.13.0",
+    "querystringify": "^2.2.0",
+    "ramda": "^0.30.1",
+    "ramda-adjunct": "^5.1.0",
+    "randexp": "^0.5.3",
+    "randombytes": "^2.1.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.2",
+    "rc": "^1.2.8",
+    "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-debounce-input": "^3.3.0",
+    "react-dom": "^18.2.0",
+    "react-immutable-proptypes": "^2.2.0",
+    "react-immutable-pure-component": "^2.2.2",
+    "react-inspector": "^6.0.2",
+    "react-is": "^16.13.1",
+    "react-redux": "^9.2.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "readable-stream": "^3.6.2",
+    "redux": "^5.0.1",
+    "redux-immutable": "^4.0.0",
+    "reflect-metadata": "^0.2.2",
+    "refractor": "^3.6.0",
+    "regenerator-runtime": "^0.14.1",
+    "remarkable": "^2.0.1",
+    "repeat-string": "^1.6.1",
+    "requires-port": "^1.0.0",
+    "reselect": "^5.1.1",
+    "ret": "^0.2.2",
+    "retry": "^0.12.0",
+    "rimraf": "^6.0.1",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "scheduler": "^0.23.2",
+    "semver": "^7.7.1",
+    "send": "^0.19.0",
+    "serialize-error": "^8.1.0",
+    "serve-static": "^1.16.2",
+    "set-blocking": "^2.0.0",
+    "setprototypeof": "^1.2.0",
+    "sha.js": "^2.4.11",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "short-unique-id": "^5.2.0",
+    "side-channel": "^1.1.0",
+    "side-channel-list": "^1.0.0",
+    "side-channel-map": "^1.0.1",
+    "side-channel-weakmap": "^1.0.2",
+    "signal-exit": "^3.0.7",
+    "simple-concat": "^1.0.1",
+    "simple-get": "^4.0.1",
+    "smart-buffer": "^4.2.0",
+    "socks": "^2.8.4",
+    "socks-proxy-agent": "^6.2.1",
+    "source-map-js": "^1.2.1",
+    "space-separated-tokens": "^1.1.5",
+    "sprintf-js": "^1.1.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
+    "ssri": "^8.0.1",
+    "statuses": "^2.0.1",
+    "streamsearch": "^1.1.0",
+    "string_decoder": "^1.3.0",
+    "string-width": "^4.2.3",
+    "string-width-cjs": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "strip-ansi-cjs": "^6.0.1",
+    "strip-json-comments": "^2.0.1",
+    "styled-jsx": "^5.1.1",
+    "swagger-client": "^3.34.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-parser": "^10.0.3",
+    "swagger-ui-dist": "^5.18.3",
     "swagger-ui-express": "^5.0.1",
     "swagger-ui-react": "^5.18.3",
-    "yamljs": "^0.3.0"
+    "tar": "^6.2.1",
+    "tar-fs": "^2.1.2",
+    "tar-stream": "^2.2.0",
+    "terminal-columns": "^1.4.1",
+    "toggle-selection": "^1.0.6",
+    "toidentifier": "^1.0.1",
+    "tree-sitter": "^0.21.1",
+    "tree-sitter-json": "^0.24.8",
+    "ts-mixer": "^6.0.4",
+    "ts-toolbelt": "^9.6.0",
+    "tslib": "^2.8.1",
+    "tunnel-agent": "^0.6.0",
+    "type-fest": "^0.20.2",
+    "type-flag": "^3.0.0",
+    "type-is": "^1.6.18",
+    "types-ramda": "^0.30.1",
+    "typescript": "^5.7.3",
+    "unique-filename": "^1.1.1",
+    "unique-slug": "^2.0.2",
+    "unpipe": "^1.0.0",
+    "unraw": "^3.0.0",
+    "url-parse": "^1.5.10",
+    "use-sync-external-store": "^1.4.0",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "validator": "^13.12.0",
+    "vary": "^1.1.2",
+    "web-streams-polyfill": "^3.3.3",
+    "web-tree-sitter": "^0.24.5",
+    "which": "^2.0.2",
+    "wide-align": "^1.1.5",
+    "wrap-ansi": "^8.1.0",
+    "wrap-ansi-cjs": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "xml": "^1.0.1",
+    "xml-but-prettier": "^1.0.1",
+    "xtend": "^4.0.2",
+    "yallist": "^4.0.0",
+    "yaml": "^2.0.0-1",
+    "yamljs": "^0.3.0",
+    "z-schema": "^5.0.5",
+    "zenscroll": "^4.0.2"
   },
-  "devDependencies": {
-    "rimraf": "^6.0.1"
-  }
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
