--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "@nestjs/common": "^11.0.9",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.9",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.9",
     "@nestjs/swagger": "^11.0.3",
     "abbrev": "^1.1.1",
@@ -25,6 +28,7 @@
     "axios": "^1.7.9",
     "balanced-match": "^1.0.2",
     "base64-js": "^1.5.1",
+    "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.8.1",
     "bindings": "^1.5.0",
     "bl": "^4.1.0",
@@ -207,6 +211,8 @@
     "package-json-from-dist": "^1.0.1",
     "parse-entities": "^2.0.0",
     "parseurl": "^1.3.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "path-is-absolute": "^1.0.1",
     "path-key": "^3.1.1",
     "path-scurry": "^2.0.0",
@@ -358,7 +364,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/better-sqlite3": "^7.6.12",
-    "@types/node": "^22.13.1"
+    "@types/node": "^22.13.1",
+    "@types/passport-jwt": "^4.0.1"
   }
 }
