--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Application
-PORT=3000
+PORT=3001
 
 # JWT
 JWT_SECRET=your_jwt_secret_here
 
 # Admin Account
 ADMIN_EMAIL=admin@example.com
-ADMIN_PASSWORD=your_secure_password_here 
+ADMIN_PASSWORD=p@ssw0rd123!
