--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "backend-portfolio",
   "version": "1.0.0",
-  "description": "Ce projet est le backend de mon portfolio personnel, développé avec Next.js et SQLite.",
-  "main": "index.js",
+  "description": "Ce projet est le backend de mon portfolio personnel, développé avec Nest.js et SQLite.",
+  "main": "src/main.ts",
   "dependencies": {
     "@nestjs/common": "^11.0.9",
     "@nestjs/config": "^4.0.0",
@@ -322,7 +322,6 @@
     "type-flag": "^3.0.0",
     "type-is": "^1.6.18",
     "types-ramda": "^0.30.1",
-    "typescript": "^5.7.3",
     "unique-filename": "^1.1.1",
     "unique-slug": "^2.0.2",
     "unpipe": "^1.0.0",
@@ -355,19 +354,30 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "start:prod": "node dist/main.js",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nestjs/cli": "^11.0.5",
     "@types/bcrypt": "^5.0.2",
     "@types/better-sqlite3": "^7.6.12",
-    "@types/node": "^22.13.1",
-    "@types/passport-jwt": "^4.0.1"
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.13.11",
+    "@types/passport-jwt": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.27.0",
+    "@typescript-eslint/parser": "^8.27.0",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2"
   }
 }
