--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ JWT_SECRET=your_jwt_secret_here
 
 # Admin Account
 ADMIN_EMAIL=admin@example.com
-ADMIN_PASSWORD=p@ssw0rd123!
+ADMIN_PASSWORD=P@ssw0rd123!
